feat:add footer with logos

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV Page</title>
 </head>
 <body>
-    
+    <div>
+        <header>
+
+        </header>
+        <footer>
+            <a id="git-logo" href="https://github.com/ValTK">
+                <img src="./GitHubLogo.svg" alt="github logo" width="64" height="64"> GitHub
+            </a>
+            <a id="rs-logo" href="https://rs.school/js/">
+                <img src="./RS icon.svg" alt="rsschool logo" width="128" height="96">
+            </a>
+        </footer>
+    </div>
 </body>
 </html>
