feat: add photo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="main-block">
         <aside>
             <header>
+                <img src="./ava.jpg" alt="my beautiful head" width="60" height="140">
                 <h1>Valeriy Zhigalov</h1>
                 <h3>Front-End Developer Wannabe</h3>
             </header>
