fix: minor fixes

--- a/index.html
+++ b/index.html
@@ -16,24 +16,23 @@
                     <div class="header-body">
                         <img src="./logos/ava.jpg" alt="my beautiful head" width="280" height="415">
                         <div class="header-burger">
-                            <span>
-                            </span>
+                            <span></span>
                         </div>
                         <nav class="header-menu">
                             <ul class="header-list">
-                                <li>
+                                <li>Main
                                     <a href="" class="header-link"></a>
                                 </li>
-                                <li>
+                                <li>Contacts
                                     <a href="" class="header-link"></a>
                                 </li>
-                                <li>
+                                <li>Education
                                     <a href="" class="header-link"></a>
                                 </li>
-                                <li>
+                                <li>Skills
                                     <a href="" class="header-link"></a>
                                 </li>
-                                <li>
+                                <li>Code
                                     <a href="" class="header-link"></a>
                                 </li>
                             </ul>
@@ -41,7 +40,6 @@
                     </div>
                     <h1>Valeriy Zhigalov</h1>
                     <h3>Front-End Developer Wannabe</h3>
-
                 </div>
             </header>
             <div class="skills">
@@ -66,29 +64,25 @@
         enough knowledge and skills to start my career in IT.
         </section>
         <section class="education">
-            <ul>Education:
+            <ul>Education/Courses:
                 <li>Belarus State Economic University, Economics and Trade Management</li>
-                    <ul>Courses:</ul>
-                        <li>FreeCodeCamp, Resposive Web Design</li>
-                        <li>W3Schools, HTML and CSS Tutorials</li>
-                        <li>RS-School, JS/Front-End. Stage 1</li>
-                        <li>[JavaScript.ru](https://www.learn.javacsript.ru)</li>
+                <li>FreeCodeCamp, Resposive Web Design</li>
+                <li>W3Schools, HTML and CSS Tutorials</li>
+                <li>RS-School, JS/Front-End. Stage 1</li>
             </ul>
         </section>
         <section></section>
         <figure>
-            <figcaption>Get browser details using navigator.</figcaption>
-                <pre><code class="jscode">
-                    function NavigatorExample() {
-                    var txt;
-                    txt = "Browser CodeName: " + navigator.appCodeName + "; ";
-                    txt+= "Browser Name: " + navigator.appName + "; ";
-                    txt+= "Browser Version: " + navigator.appVersion + "; ";
-                    txt+= "Cookies Enabled: " + navigator.cookieEnabled + "; ";
-                    txt+= "Platform: " + navigator.platform + "; ";
-                    txt+= "User-agent header: " + navigator.userAgent + "; ";
-                    console.log("NavigatorExample", txt);
-                    }</code>
+            <figcaption>Easy Counting Code</figcaption>
+                <pre>
+                    <code class="jscode">
+                    let x = [1, 2, 3];
+
+                    for (let i = 0; i < x.length; i++) {
+
+                    console.log(i);
+                    }
+                    </code>
                 </pre>
         </figure>
         <footer>
